--- a/HW_42_Internet-shop(LocalStorage)/index.html
+++ b/HW_42_Internet-shop(LocalStorage)/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HW_42</title>
+    <title>HW_42_test</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -10,39 +10,39 @@
     <h1>Інтернет-магазин</h1>
 </header>
 <div class="wrapper">
-    <aside class="left-sidebar">
-        <div id="left-sidebar-content">
+    <aside class="left-sidebar" id="left-sidebar">
+        <div id="categories-section">
             <h2>Категорії</h2>
 
-            <ul>
+            <ul class="categories">
                 <li class="category">Фрукти</li>
                 <li class="category">Овочі</li>
                 <li class="category">Напої</li>
             </ul>
+
+            <button class="orders" id="ordersButton" type="button">Мої замовлення</button>
         </div>
 
-        <button class="orders" id="ordersButton" type="button">Мої замовлення</button>
-
-        <ol class="orders-data" id="ordersData"></ol>
+        <div id="user-shopping-cart" style="display: none;"></div>
     </aside>
 
     <div class="main-content">
-        <div id="products">
+        <div id="products-section">
             <h2>Товари</h2>
             <ul id="product-list"></ul>
         </div>
     </div>
 
     <aside class="right-sidebar">
-        <div id="productInfo">
+        <div id="product-info">
             <h2>Інформація про товар</h2>
-            <p id="productDetails"></p>
+            <p id="product-details"></p>
             <button id="buy-button">Купити</button>
 
-            <form id="orderForm">
+            <form class="order-form" id="order-form">
                 <h4 class="form-header">Форма оформлення замовлення</h4>
-                <label for="fullName" class="form-item">ПІБ покупця:</label>
-                <input type="text" id="fullName" name="fullName" required>
+                <label for="full-name" class="form-item">ПІБ покупця:</label>
+                <input type="text" id="full-name" name="fullName" required>
 
                 <label for="city" class="form-item">Оберіть місто:</label>
                 <select id="city" name="city" required>
@@ -52,14 +52,14 @@
                     <option value="Миколаїв">Миколаїв</option>
                 </select>
 
-                <label for="deliveryBranch" class="form-item">Відділеня Нової пошти для надсилання:</label>
-                <input type="number" id="deliveryBranch" name="deliveryBranch" min="1" required>
+                <label for="delivery-branch" class="form-item">Відділеня Нової пошти для надсилання:</label>
+                <input type="number" id="delivery-branch" name="deliveryBranch" min="1" required>
 
                 <label class="form-item">Метод оплати:</label>
-                <input type="radio" id="cashOnDelivery" name="paymentMethod" value="Післяплата" required>
-                <label for="cashOnDelivery">Післяплата</label>
-                <input type="radio" id="cardPayment" name="paymentMethod" value="Оплата карткою" required>
-                <label for="cardPayment">Оплата банківською карткою</label>
+                <input type="radio" id="cash-on-delivery" name="paymentMethod" value="Післяплата" required>
+                <label for="cash-on-delivery">Післяплата</label>
+                <input type="radio" id="card-payment" name="paymentMethod" value="Оплата карткою" required>
+                <label for="card-payment">Оплата банківською карткою</label>
 
                 <label for="quantity" class="form-item">Кількість продукції, що купується:</label>
                 <input type="number" id="quantity" name="quantity" min="1" required>
@@ -67,7 +67,7 @@
                 <label for="comment" class="form-item">Коментар до замовлення:</label>
                 <textarea id="comment" name="comment" placeholder="Все супер!"></textarea>
 
-                <button type="submit" id="formSubmit" class="form-item">Підтвердити замовлення</button>
+                <button type="submit" id="form-submit">Підтвердити замовлення</button>
             </form>
         </div>
     </aside>
