--- a/HW_42_Internet-shop(LocalStorage)/index.html
+++ b/HW_42_Internet-shop(LocalStorage)/index.html
@@ -20,10 +20,10 @@
                 <li class="category">Напої</li>
             </ul>
 
-            <button class="orders" id="ordersButton" type="button">Мої замовлення</button>
+            <button class="orders" id="orders-button" type="button">Мої замовлення</button>
         </div>
 
-        <div id="user-shopping-cart" style="display: none;"></div>
+        <div id="shopping-cart-section" style="display: none;"></div>
     </aside>
 
     <div class="main-content">
